--- a/app/src/main/res/layout/fragment_lista_pessoa.xml
+++ b/app/src/main/res/layout/fragment_lista_pessoa.xml
@@ -7,6 +7,8 @@
     tools:context=".ui.home.ListaPessoasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPessoas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin_ecran" />
 </FrameLayout>
