--- a/app/src/main/res/menu/menu_lista_pessoas.xml
+++ b/app/src/main/res/menu/menu_lista_pessoas.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_nova_pessoa"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/nova_pessoa"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_alterar_pessoa"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/alterar_pessoa"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_eliminar_pessoa"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/eliminar_pessoa"
         app:showAsAction="ifRoom" />
