Navegar para a nova pessoa ao clicar na opção correspondente do menu

--- a/app/src/main/res/layout/fragment_nova_pessoa.xml
+++ b/app/src/main/res/layout/fragment_nova_pessoa.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_campos"
                     android:hint="@string/data_de_nascimento"
-                    android:inputType="date" />
+                    android:inputType="date|datetime" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
