--- a/app/src/main/res/layout/fragment_edit_pessoa.xml
+++ b/app/src/main/res/layout/fragment_edit_pessoa.xml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditPessoaFragment">
+    android:orientation="vertical"
+    tools:context=".EditPessoaFragment" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<com.google.android.material.textfield.TextInputLayout
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_margin="@dimen/margin_ecran">
+
+<com.google.android.material.textfield.TextInputEditText
+    android:id="@+id/editTextNome"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/nome"
+    android:inputType="textPersonName" />
+
+<com.google.android.material.textfield.TextInputLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/editTextSexo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_campos"
+        android:hint="@string/sexo"
+        android:inputType="textPersonName|text" />
 
-</FrameLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextDataNascimento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_campos"
+            android:hint="@string/data_de_nascimento"
+            android:inputType="date|datetime" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextTelemovel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_campos"
+                android:hint="@string/telemovel"
+                android:inputType="phone" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_campos"
+                android:text="@string/distrito" />
+
+            <Spinner
+                android:id="@+id/spinnerDistrito"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_campos" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+</com.google.android.material.textfield.TextInputLayout>
+</com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
