--- a/app/src/main/res/layout/fragment_edita_pessoa.xml
+++ b/app/src/main/res/layout/fragment_edita_pessoa.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EditPessoaFragment" >
+    tools:context=".EditaPessoaFragment" >
 
 <com.google.android.material.textfield.TextInputLayout
 android:layout_width="match_parent"
