--- a/app/src/main/res/layout/fragment_elimina_pessoa.xml
+++ b/app/src/main/res/layout/fragment_elimina_pessoa.xml
@@ -1,6 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EliminaPessoaFragment"/>
+    android:orientation="vertical"
+    tools:context=".EliminaPessoaFragment" >
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        android:text="@string/nome"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        tools:text="@string/carlos_cruz"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        android:text="@string/sexo"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        tools:text="Masculnio"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        android:text="@string/data_de_nascimento"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        tools:text="20/05/1990"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        android:text="@string/telemovel"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        tools:text="990360110"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        android:text="@string/distrito"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_ecran"
+        android:layout_marginLeft="@dimen/margin_ecran"
+        android:layout_marginTop="@dimen/margin_ecran"
+        android:layout_marginEnd="@dimen/margin_ecran"
+        android:layout_marginRight="@dimen/margin_ecran"
+        tools:text="Guarda"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+</LinearLayout>
