--- a/app/src/main/res/layout/fragment_elimina_pessoa.xml
+++ b/app/src/main/res/layout/fragment_elimina_pessoa.xml
@@ -20,7 +20,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
@@ -45,7 +45,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewSexo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
@@ -70,7 +70,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textViewDataNascimento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
@@ -95,7 +95,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textViewTelemovel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
@@ -120,7 +120,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/textViewDistrito"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
