--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/listaPessoaFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_emoji_people_24"
             android:title="@string/menu_pessoa" />
         <item
             android:id="@+id/novaPessoaFragment"
@@ -16,5 +16,10 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
-    </group>
+
+        <item
+            android:id="@+id/nav_distrito"
+            android:icon="@drawable/ic_baseline_location_city_24"
+            android:title="@string/nav_distrito_menu" />
+</group>
 </menu>
