--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,9 +20,6 @@
         <action
             android:id="@+id/action_listaPessoaFragment_to_eliminaPessoaFragment"
             app:destination="@id/eliminaPessoaFragment" />
-        <action
-            android:id="@+id/action_listaPessoaFragment_to_distritoFragment"
-            app:destination="@id/nav_distrito" />
     </fragment>
 
     <fragment
@@ -35,11 +32,6 @@
             app:destination="@id/listaPessoaFragment" />
     </fragment>
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="ipg.primeiro.projetofinalcovid.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
     <fragment
         android:id="@+id/editPessoaFragment"
         android:name="ipg.primeiro.projetofinalcovid.EditaPessoaFragment"
@@ -58,12 +50,8 @@
             app:destination="@id/listaPessoaFragment" />
     </fragment>
     <fragment
-        android:id="@+id/nav_distrito"
-        android:name="ipg.primeiro.projetofinalcovid.ui.Distrito.DistritoFragment"
-        android:label="distrito_fragment"
-        tools:layout="@layout/fragment_distrito" >
-        <action
-            android:id="@+id/action_distritoFragment_to_listaPessoaFragment"
-            app:destination="@id/listaPessoaFragment" />
-    </fragment>
+        android:id="@+id/listaDistritoFragment"
+        android:name="ipg.primeiro.projetofinalcovid.ListaDistritoFragment"
+        android:label="fragment_lista_distrito"
+        tools:layout="@layout/fragment_lista_distrito" />
 </navigation>
