--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,10 +9,10 @@
             android:icon="@drawable/ic_baseline_emoji_people_24"
             android:title="@string/menu_pessoa" />
 
-       
+
 
         <item
-            android:id="@+id/nav_distrito"
+            android:id="@+id/listaDistritoFragment"
             android:icon="@drawable/ic_baseline_location_city_24"
             android:title="@string/nav_distrito_menu" />
 </group>
