Criado a menu para mostrar lista de distrito

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,5 +15,10 @@
             android:id="@+id/listaDistritoFragment"
             android:icon="@drawable/ic_baseline_location_city_24"
             android:title="@string/nav_distrito_menu" />
+
+        <item
+            android:id="@+id/distritoFragment"
+            android:icon="@drawable/ic_baseline_location_city_24"
+            android:title="@string/nav_distrito_menu" />
 </group>
 </menu>
