Corrigido o bug no formato das datas

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,8 +17,8 @@
             android:title="@string/nav_distrito_menu" />
 
         <item
-            android:id="@+id/distritoFragment"
-            android:icon="@drawable/ic_baseline_location_city_24"
-            android:title="@string/nav_distrito_menu" />
+            android:id="@+id/listaTesteFragment"
+            android:icon="@drawable/ic_baseline_clean_hands_24"
+            android:title="@string/titulo_testes" />
 </group>
 </menu>
