--- a/app/src/main/res/layout/fragment_elimina_pessoa.xml
+++ b/app/src/main/res/layout/fragment_elimina_pessoa.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EliminaPessoaFragment" >
+    tools:context=".ui.PessoasFragment.EliminaPessoaFragment" >
 
     <TextView
         android:id="@+id/textView3"
