--- a/app/src/main/res/layout/fragment_lista_distrito.xml
+++ b/app/src/main/res/layout/fragment_lista_distrito.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListaPessoaFragment.ListaPessoasFragment">
+    tools:context=".ui.PessoasFragment.ListaPessoasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDistrito"
