--- a/app/src/main/res/layout/fragment_novo_distrito.xml
+++ b/app/src/main/res/layout/fragment_novo_distrito.xml
@@ -16,7 +16,7 @@
             android:id="@+id/editTextNomeDistrito"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nome do Distrito"
+            android:hint="@string/nome_distrito"
             android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
